--- a/LemonPlatform.Wpf/Views/Pages/SettingView.xaml
+++ b/LemonPlatform.Wpf/Views/Pages/SettingView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LemonPlatform.Wpf.Views.Pages.SettingView"
+﻿<UserControl x:Class="LemonPlatform.Wpf.Views.Pages.SettingView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -55,4 +55,4 @@
 
 
     </Grid>
-</Page>
+</UserControl>
