--- a/LemonPlatform.Module.Hello/Views/HelloView.xaml
+++ b/LemonPlatform.Module.Hello/Views/HelloView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LemonPlatform.Module.Hello.Views.HelloView"
+﻿<UserControl x:Class="LemonPlatform.Module.Hello.Views.HelloView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,18 +7,17 @@
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450"
-      d:DesignWidth="800"
-      Title="HelloView">
-    <Page.Resources>
+      d:DesignWidth="800">
+    <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/LemonPlatform.Core;component/Themes/LemonTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Page.Resources>
+    </UserControl.Resources>
 
     <Grid>
-        <TextBlock Text="Hello" Foreground= "{DynamicResource MaterialDesignBody}"/>
+        <TextBlock Text="Hello"/>
 
     </Grid>
-</Page>
+</UserControl>
