--- a/LemonPlatform.Module.Json/Views/JsonView.xaml
+++ b/LemonPlatform.Module.Json/Views/JsonView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LemonPlatform.Module.Json.Views.JsonView"
+﻿<UserControl x:Class="LemonPlatform.Module.Json.Views.JsonView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,16 +8,15 @@
       d:DesignHeight="450" 
       d:DesignWidth="800"
       xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.WPF;assembly=LiveChartsCore.SkiaSharpView.WPF"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      Title="JsonView">
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
 
-    <Page.Resources>
+    <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/LemonPlatform.Core;component/Themes/LemonTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Page.Resources>
+    </UserControl.Resources>
 
     <Grid>
 
@@ -25,7 +24,6 @@
                             Margin="5,0,24,0"
                             AutomationProperties.Name="HamburgerToggleButton"
                             IsChecked="False"
-                      
                             Style="{StaticResource MaterialDesignHamburgerToggleButton}" />
     </Grid>
-</Page>
+</UserControl>
