--- a/LemonPlatform.Wpf/Views/Pages/ChatView.xaml
+++ b/LemonPlatform.Wpf/Views/Pages/ChatView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LemonPlatform.Wpf.Views.Pages.ChatView"
+﻿<UserControl x:Class="LemonPlatform.Wpf.Views.Pages.ChatView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,8 +8,7 @@
       xmlns:model="clr-namespace:LemonPlatform.Core.Models;assembly=LemonPlatform.Core"
       mc:Ignorable="d" 
       d:DesignHeight="450" 
-      d:DesignWidth="800"
-      Title="ChatView">
+      d:DesignWidth="800">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -29,7 +28,6 @@
                     materialDesign:TextFieldAssist.HasClearButton="True"
                     materialDesign:TextFieldAssist.TextFieldCornerRadius="8"
                     DockPanel.Dock="Top"
-                    Foreground="{DynamicResource MaterialDesignBody}"
                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
                     Text="{Binding SearchKeyword, UpdateSourceTrigger=PropertyChanged}" />
 
@@ -47,6 +45,7 @@
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="ListBoxItem" BasedOn="{StaticResource MaterialDesign3.NavigationDrawerPrimaryListBoxItem}">
                             <!--<Setter Property="materialDesign:BadgedAssist.Badge" Value="{Binding Notifications}" />-->
+                            <Setter Property="Width" Value="360" />
                             <Setter Property="materialDesign:NavigationDrawerAssist.SelectedIcon" Value="{Binding IconFont}" />
                             <Setter Property="materialDesign:NavigationDrawerAssist.UnselectedIcon" Value="{Binding IconFont}" />
                         </Style>
@@ -56,10 +55,12 @@
             <Border Grid.Column="1" Width="0.8"  Background="{DynamicResource MaterialDesignCardBackground}"/>
         </Grid>
 
-        <Frame
-            NavigationUIVisibility="Hidden" 
-            Background="Transparent" 
-            Grid.Column="1" 
-            Content="{Binding Path=CurrentChat, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <ScrollViewer Background="Transparent" 
+                      Grid.Column="1" 
+                      materialDesign:ScrollViewerAssist.IsAutoHideEnabled="True"
+                      HorizontalScrollBarVisibility="Auto"
+                      VerticalScrollBarVisibility="Auto">
+            <ContentControl Content="{Binding CurrentChat, UpdateSourceTrigger=PropertyChanged, FallbackValue={x:Null}}" />
+        </ScrollViewer>
     </Grid>
-</Page>
+</UserControl>
