--- a/LemonPlatform.Wpf/Views/Pages/HomeView.xaml
+++ b/LemonPlatform.Wpf/Views/Pages/HomeView.xaml
@@ -1,14 +1,13 @@
-﻿<Page x:Class="LemonPlatform.Wpf.Views.Pages.HomeView"
+﻿<UserControl x:Class="LemonPlatform.Wpf.Views.Pages.HomeView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LemonPlatform.Wpf.Views.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Home">
+      d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
         <TextBlock Text="Home Page" />
     </Grid>
-</Page>
+</UserControl>
