--- a/LemonPlatform.Wpf/Views/Pages/PluginView.xaml
+++ b/LemonPlatform.Wpf/Views/Pages/PluginView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LemonPlatform.Wpf.Views.Pages.PluginView"
+﻿<UserControl x:Class="LemonPlatform.Wpf.Views.Pages.PluginView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,8 +6,8 @@
       xmlns:local="clr-namespace:LemonPlatform.Wpf.Views.Pages"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="PluginView">
+      d:DesignHeight="450"
+      d:DesignWidth="800">
 
     <Grid>
         <ListBox ItemsSource="{Binding PluginItems}"
@@ -57,4 +57,4 @@
 
         </ListBox>
     </Grid>
-</Page>
+</UserControl>
