--- a/LemonPlatform.Core/Themes/LemonResource.xaml
+++ b/LemonPlatform.Core/Themes/LemonResource.xaml
@@ -1,5 +1,83 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Geometry x:Key="Lemon">M452.266667 284.444444L512 425.984 571.960889 284.444444a65.536 65.536 0 1 0-119.352889 0zM317.781333 400.156444l142.336 56.888889-57.457777-142.222222a65.536 65.536 0 1 0-84.423112 84.423111zM642.958222 308.792889l-56.888889 142.336 142.222223-57.457778a65.536 65.536 0 1 0-69.404445-107.747555 64.739556 64.739556 0 0 0-15.928889 22.869333zM719.872 633.287111l-142.336-56.888889 57.457778 142.222222a65.536 65.536 0 1 0 108.088889-70.087111 64.853333 64.853333 0 0 0-23.210667-15.246222zM571.733333 739.555556L512 598.016 452.039111 739.555556a65.536 65.536 0 1 0 125.155556 27.079111 66.332444 66.332444 0 0 0-5.461334-27.079111zM739.555556 452.380444L598.016 512 739.555556 571.960889a65.536 65.536 0 1 0 27.079111-125.155556 64.284444 64.284444 0 0 0-27.079111 5.575111zM284.444444 571.847111L425.870222 512 284.444444 452.039111a64.284444 64.284444 0 0 0-27.079111-5.802667 65.536 65.536 0 1 0 0 131.072 66.901333 66.901333 0 0 0 27.079111-5.461333zM393.443556 715.207111l57.457777-142.222222-142.336 56.888889a66.901333 66.901333 0 0 0-22.755555 15.018666 65.536 65.536 0 0 0 92.728889 92.728889 67.470222 67.470222 0 0 0 14.904889-22.414222z</Geometry>
-    
+
+    <Style TargetType="{x:Type RadioButton}" x:Key="RadioButtonStyle">
+        <Setter Property="FocusVisualStyle">
+            <Setter.Value>
+                <Style>
+                    <Setter Property="Control.Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Rectangle Margin="2" SnapsToDevicePixels="True" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2"/>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Margin" Value="0 2 0 0"/>
+        <Setter Property="FontSize" Value="26"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type RadioButton}">
+                    <Grid x:Name="templateRoot" Background="Transparent" SnapsToDevicePixels="True">
+                        <Border x:Name="border" BorderBrush="Red" BorderThickness="0"  SnapsToDevicePixels="True"/>
+                        <Border x:Name="bd2"/>
+                        <ContentPresenter x:Name="contentPresenter" 
+                                         ContentTemplate="{TemplateBinding ContentTemplate}"
+                                         Content="{TemplateBinding Content}"
+                                         ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                         Focusable="False" 
+                                         HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                         Margin="{TemplateBinding Padding}"
+                                         RecognizesAccessKey="True"
+                                         SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
+                                         VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="HasContent" Value="True">
+                            <Setter Property="FocusVisualStyle">
+                                <Setter.Value>
+                                    <Style>
+                                        <Setter Property="Control.Template">
+                                            <Setter.Value>
+                                                <ControlTemplate>
+                                                    <Rectangle Margin="14,0,0,0" 
+                                                              SnapsToDevicePixels="True" 
+                                                              Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" 
+                                                              StrokeThickness="1" 
+                                                              StrokeDashArray="1 2"/>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="Padding" Value="4,-1,0,0"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#F7F7F7" TargetName="border"/>
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="true">
+                            <Setter Property="FontWeight" Value="Bold"/>
+                            <Setter Property="Foreground"  Value="{Binding BackgroundColor}"/>
+                            <Setter Property="BorderThickness" Value="4 0 0 0" TargetName="bd2"/>
+                            <Setter Property="BorderBrush" Value="{Binding BackgroundColor}" TargetName="bd2"/>
+                            <Setter Property="Background" Value="{Binding BackgroundColor}" TargetName="border"/>
+                            <Setter Property="Opacity" Value="0.05" TargetName="border"/>
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="{x:Null}"/>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="MinHeight" Value="44"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+    </Style>
 </ResourceDictionary>
