--- a/LemonPlatform.Wpf/Views/Pages/PluginView.xaml
+++ b/LemonPlatform.Wpf/Views/Pages/PluginView.xaml
@@ -9,7 +9,7 @@
       d:DesignHeight="450"
       d:DesignWidth="800">
 
-    <Grid>
+    <Grid Margin="5">
         <ListBox ItemsSource="{Binding PluginItems}"
                  SelectedItem="{Binding SelectedPluginItem}">
             <ListBox.ItemTemplate>
