--- a/LemonPlatform.Wpf/Views/Pages/SettingView.xaml
+++ b/LemonPlatform.Wpf/Views/Pages/SettingView.xaml
@@ -9,7 +9,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="450"
       d:DesignWidth="1000">
-    <Grid>
+    <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition/>
