--- a/LemonPlatform.Core/Themes/LemonTheme.xaml
+++ b/LemonPlatform.Core/Themes/LemonTheme.xaml
@@ -2,7 +2,7 @@
                      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <materialDesign:BundledTheme BaseTheme="Dark"
+        <materialDesign:BundledTheme BaseTheme="Inherit"
                                      ColorAdjustment="{materialDesign:ColorAdjustment}"
                                      PrimaryColor="DeepPurple"
                                      SecondaryColor="Lime" />
