--- a/LemonPlatform.Wpf/App.xaml
+++ b/LemonPlatform.Wpf/App.xaml
@@ -8,6 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/LemonPlatform.Core;component/Themes/LemonTheme.xaml" />
                 <ResourceDictionary Source="/Resources/NotifyIconResources.xaml" />
+                <ResourceDictionary Source="/LemonPlatform.BusyIndicator;component/Theme/Default.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
