--- a/LemonPlatform.Wpf/Views/Pages/LogView.xaml
+++ b/LemonPlatform.Wpf/Views/Pages/LogView.xaml
@@ -50,11 +50,14 @@
                     <Grid.RowDefinitions>
                         <RowDefinition/>
                         <RowDefinition/>
+                        <RowDefinition/>
                     </Grid.RowDefinitions>
                     <Label Grid.Row="0" Grid.Column="0" Content="Logger Level: " HorizontalContentAlignment="Right" VerticalAlignment="Center"/>
                     <ComboBox Grid.Row="0" Grid.Column="1" Width="200" ItemsSource="{Binding LogLevels}" SelectedItem="{Binding SelectedLogLevel}"/>
-                    <Label Grid.Row="1" Grid.Column="0" Content="Date: " HorizontalContentAlignment="Right"  VerticalAlignment="Center"/>
-                    <DatePicker Grid.Row="1" Grid.Column="1" Width="200" VerticalAlignment="Center" SelectedDate="{Binding SelectedDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                    <Label Grid.Row="1" Grid.Column="0" Content="Logger Count: " HorizontalContentAlignment="Right" VerticalAlignment="Center"/>
+                    <ComboBox Grid.Row="1" Grid.Column="1" Width="200" ItemsSource="{Binding LogCounts}" SelectedItem="{Binding SelectedLogCount}"/>
+                    <Label Grid.Row="2" Grid.Column="0" Content="Date: " HorizontalContentAlignment="Right"  VerticalAlignment="Center"/>
+                    <DatePicker Grid.Row="2" Grid.Column="1" Width="200" VerticalAlignment="Center" SelectedDate="{Binding SelectedDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
 
                 </Grid>
                 <Button Grid.Column="1" Width="200" Content="Search" Command="{Binding SearchCommand}"/>
