--- a/LemonPlatform.Wpf/Views/MainWindow.xaml
+++ b/LemonPlatform.Wpf/Views/MainWindow.xaml
@@ -65,10 +65,22 @@
                         HorizontalContentAlignment="Center"
                         PopupHorizontalOffset="100"
                         PopupVerticalOffset="-100"
-                        Height="50"
+                        materialDesign:RippleAssist.Feedback="{x:Null}"
+                        Height="40"
                         Width="100">
                         <materialDesign:PopupBox.ToggleContent>
-                            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Width="100" >
+                            <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Width="100">
+                                <StackPanel.Style>
+                                    <Style TargetType="StackPanel">
+                                        <Setter Property="Background" Value="Transparent" />
+                                        <Style.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="{DynamicResource MaterialDesign.Brush.Primary}" />
+                                                <Setter Property="Opacity" Value="0.8" />
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </StackPanel.Style>
                                 <materialDesign:PackIcon Width="40" Height="40" Kind="User" />
                                 <StackPanel VerticalAlignment="Center" Height="30">
                                     <TextBlock Text="tracy.ma" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontSize="14" Foreground="{DynamicResource MaterialDesignBody}"/>
