--- a/LemonPlatform.Module.DataStructure/Views/SkipListView.xaml
+++ b/LemonPlatform.Module.DataStructure/Views/SkipListView.xaml
@@ -4,9 +4,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LemonPlatform.Module.DataStructure.Views"
+             xmlns:controls="clr-namespace:LemonPlatform.Core.Controls;assembly=LemonPlatform.Core"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-
+             d:DesignHeight="450"
+             d:DesignWidth="800">
+    <Grid Margin="10">
+        <TextBlock Text="Skip list"/>
+        <ScrollViewer
+                VerticalScrollBarVisibility="Auto"
+                HorizontalScrollBarVisibility="Auto">
+            <controls:LemonSKElement 
+                Width="500"
+                Height="200"
+                Render="{Binding Render,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" />
+        </ScrollViewer>
     </Grid>
 </UserControl>
